apps/production/home-assistant/route-patch-z2m.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt-route
  namespace: home-assistant
spec:
  hostnames:
    - z2m.fanen.dk
